fix: scrolling on mobile devices

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -21,7 +21,7 @@ html {
 
 body {
   --custom-color: #7f8fa40d;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--color-sec);
   background-image: linear-gradient(0deg, transparent 20%, var(--custom-color) 20.3%, var(--custom-color) 21.7%, transparent 22%, transparent 70%, var(--custom-color) 70.3%, var(--custom-color) 71.7%, transparent 72%, transparent), 
                   linear-gradient(90deg, transparent 20%, var(--custom-color) 20.3%, var(--custom-color) 21.7%, transparent 22%, transparent 70%, var(--custom-color) 70.3%, var(--custom-color) 71.7%, transparent 72%, transparent);
