--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -15,7 +15,7 @@ html {
 }
 
 section{
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
